force-app/main/default/objects/User_Region__c/User_Region__c.object-meta.xml
<CustomObject>
    <label>User Region</label>
    <nameField>
        <displayFormat>UR ID - {0000}</displayFormat>
        <label>User Region ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>