force-app/main/default/objects/User_Region__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DELAWARE</fullName>
            </value>
            <value>
                <fullName>DISTRICT OF COLUMBIA</fullName>
            </value>
            <value>
                <fullName>MARYLAND</fullName>
            </value>
            <value>
                <fullName>NORTH CAROLINA (LF)</fullName>
            </value>
            <value>
                <fullName>NEW JERSEY</fullName>
            </value>
            <value>
                <fullName>PENNSYLVANIA</fullName>
            </value>
            <value>
                <fullName>VIRGINIA</fullName>
            </value>
            <value>
                <fullName>WEST VIRGINIA</fullName>
            </value>
            <value>
                <fullName>ILLINOIS</fullName>
            </value>
            <value>
                <fullName>INDIANA</fullName>
            </value>
            <value>
                <fullName>KENTUCKY</fullName>
            </value>
            <value>
                <fullName>MICHIGAN</fullName>
            </value>
            <value>
                <fullName>OHIO</fullName>
            </value>
            <value>
                <fullName>IOWA</fullName>
            </value>
            <value>
                <fullName>KANSAS</fullName>
            </value>
            <value>
                <fullName>MINNESOTA</fullName>
            </value>
            <value>
                <fullName>MISSOURI</fullName>
            </value>
            <value>
                <fullName>NEBRASKA</fullName>
            </value>
            <value>
                <fullName>NORTH DAKOTA</fullName>
            </value>
            <value>
                <fullName>SOUTH DAKOTA</fullName>
            </value>
            <value>
                <fullName>WISCONSIN</fullName>
            </value>
            <value>
                <fullName>CONNECTICUT</fullName>
            </value>
            <value>
                <fullName>MASSACHUSETTS</fullName>
            </value>
            <value>
                <fullName>NEW YORK</fullName>
            </value>
            <value>
                <fullName>RHODE ISLAND</fullName>
            </value>
            <value>
                <fullName>SOUTH CAROLINA</fullName>
            </value>
            <value>
                <fullName>NORTH CAROLINA</fullName>
            </value>
            <value>
                <fullName>ALABAMA</fullName>
            </value>
            <value>
                <fullName>GEORGIA</fullName>
            </value>
            <value>
                <fullName>MISSISSIPPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>